k8s/deployment.yml

apiVersion: v1
kind: Service
metadata:
  name: opencv
spec:
  ports:
  - port: 80
  type: LoadBalancer
  selector:
    app: opencv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencv
spec:
  selector:
    matchLabels:
      app: opencv
  template:
    metadata:
      labels:
        app: opencv
    spec:
      containers:
      - name: opencv
        image: dock-harbor.app.anton1.antondemo0101.dev.superhub.io/library/opencv
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: harbor-pullsecret
